force-app/main/default/objects/Emergency_Contact__c/Emergency_Contact__c.object-meta.xml
<CustomObject>
    <description>Emergency contact object for user defined emergency contacts</description>
    <label>Emergency Contact</label>
    <nameField>
        <label>Emergency Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Emergency Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>