force-app/main/default/objects/Emergency_Contact__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <businessOwnerGroup>Data_Owner_SSI</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>[PeopleSoft] PS Emergency Contact Country id lookup to Country__c table</description>
    <label>Country</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>Emergency Contacts (Country)</relationshipLabel>
    <relationshipName>Emergency_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>