force-app/main/default/objects/Emergency_Contact__c/fields/Country_Name__c.field-meta.xml
<CustomField>
    <fullName>Country_Name__c</fullName>
    <businessOwnerGroup>Data_Owner_SSI</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>Lookup Country Name using [PeopleSoft] Emergency Contact Country id</description>
    <formula>Country__r.Name</formula>
    <label>Country Name</label>
    <type>Text</type>
</CustomField>