force-app/main/default/objects/Emergency_Contact__c/fields/Emergency_Contact_Address__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Address__c</fullName>
    <businessOwnerGroup>Data_Owner_SSI</businessOwnerGroup>
    <complianceGroup>PII</complianceGroup>
    <description>[PeopleSoft] PS emergency contact address field - combining address1 and address2 from extract sql PS_EMERGENCY_CNTCT</description>
    <label>Emergency Contact Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>