force-app/main/default/objects/Emergency_Contact__c/fields/Emergency_Contact_City__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_City__c</fullName>
    <businessOwnerGroup>Data_Owner_SSI</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>[PeopleSoft] PS emergency contact city</description>
    <label>Emergency Contact City</label>
    <length>120</length>
    <type>Text</type>
</CustomField>