force-app/main/default/objects/Emergency_Contact__c/fields/Emergency_Contact_Country__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Country__c</fullName>
    <description>Emergency contact field from ps_emergency_cntct.country</description>
    <label>Emergency Contact Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>