force-app/main/default/objects/Emergency_Contact__c/fields/Emergency_Contact_Country_Name__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Country_Name__c</fullName>
    <businessOwnerGroup>Data_Owner_SSI</businessOwnerGroup>
    <complianceGroup>PII</complianceGroup>
    <description>Lookup Country Name using [PeopleSoft] Emergency Contact Country id</description>
    <formula>Emergency_Contact_Country__r.Name</formula>
    <label>Emergency Contact Country Name</label>
    <type>Text</type>
</CustomField>