force-app/main/default/objects/Emergency_Contact__c/fields/Emergency_Contact_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Full_Name__c</fullName>
    <businessOwnerGroup>Data_Owner_SSI</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>[PeopleSoft] PS first and last name of emergency contact from PS_EMERGENCY_CNTCT, used in Student 360 Student Profile</description>
    <label>Emergency Contact Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>