force-app/main/default/objects/Emergency_Contact__c/fields/Emergency_Contact_Other_Phone__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Other_Phone__c</fullName>
    <businessOwnerGroup>Data_Owner_SSI</businessOwnerGroup>
    <complianceGroup>PII</complianceGroup>
    <description>[PeopleSoft] From PS table ps_emergency_phone, used in Student 360 Student Profile</description>
    <label>Emergency Contact Other Phone</label>
    <type>Phone</type>
</CustomField>