force-app/main/default/objects/Emergency_Contact__c/fields/Emergency_Contact_Other_Phone_Type__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Other_Phone_Type__c</fullName>
    <businessOwnerGroup>Data_Owner_SSI</businessOwnerGroup>
    <complianceGroup>PII</complianceGroup>
    <description>[PeopleSoft] From PS table ps_emergency_phone</description>
    <label>Emergency Contact Other Phone Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>