force-app/main/default/objects/Emergency_Contact__c/fields/Emergency_Contact_Phone_Type__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Phone_Type__c</fullName>
    <businessOwnerGroup>Data_Owner_SSI</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>[PeopleSoft] Phone type from PS table ps_emergency_phone, Used in Student 360 Student Profile</description>
    <label>Emergency Contact Phone Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>