force-app/main/default/objects/Emergency_Contact__c/fields/Emergency_Contact_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Relationship__c</fullName>
    <businessOwnerGroup>Data_Owner_SSI</businessOwnerGroup>
    <complianceGroup>PII</complianceGroup>
    <description>[PeopleSoft] PS emergency contact relationship, used in Student 360 Student Profile</description>
    <label>Emergency Contact Relationship</label>
    <length>80</length>
    <type>Text</type>
</CustomField>