force-app/main/default/objects/Emergency_Contact__c/fields/Emergency_Contact_State__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_State__c</fullName>
    <businessOwnerGroup>Data_Owner_SSI</businessOwnerGroup>
    <complianceGroup>PII</complianceGroup>
    <description>[PeopleSoft] PS emergency contact state, used in Student 360 Student Profile</description>
    <label>Emergency Contact State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>