force-app/main/default/objects/Emergency_Contact__c/fields/Emergency_Contact_Zip__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Zip__c</fullName>
    <businessOwnerGroup>Data_Owner_SSI</businessOwnerGroup>
    <complianceGroup>PII</complianceGroup>
    <description>[PeopleSoft] PS emergency contact zip code, used in Student 360 Student Profile</description>
    <label>Emergency Contact Zip</label>
    <length>18</length>
    <type>Text</type>
</CustomField>