force-app/main/default/objects/Emergency_Contact__c/fields/Emergency_Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Primary_Contact__c</fullName>
    <businessOwnerGroup>Data_Owner_SSI</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>[PeopleSoft] PS emergency primary contact flag, used in Student 360 Student Profile</description>
    <label>Emergency Primary Contact</label>
    <type>Checkbox</type>
</CustomField>