force-app/main/default/objects/Emergency_Contact__c/fields/Other_Phone_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Other_Phone_Country_Code__c</fullName>
    <description>Phone country code from PS_EMERGENCY_PHONE.OTHER_COUNTRY_CODE</description>
    <label>Other Phone Country Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>