force-app/main/default/objects/Emergency_Contact__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <businessOwnerGroup>Data_Owner_SSI</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>[PeopleSoft] PS emergency contact phone number, Used in Student 360 Student Profile</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>