force-app/main/default/objects/Emergency_Contact__c/fields/Phone_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Phone_Country_Code__c</fullName>
    <description>Phone country dialing code from PS_EMERGENCY_PHONE.COUNTRY_CODE</description>
    <label>Phone Country Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>