force-app/main/default/objects/Emergency_Contact__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <businessOwnerGroup>Data_Owner_SSI</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>[PeopleSoft] PS emergency contact zip code, used in Student 360 Student Profile</description>
    <label>Postal Code</label>
    <length>18</length>
    <type>Text</type>
</CustomField>