force-app/main/default/objects/Emergency_Contact__c/fields/Relationship__c.field-meta.xml
<CustomField>
    <fullName>Relationship__c</fullName>
    <businessOwnerGroup>Data_Owner_SSI</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>[PeopleSoft] PS emergency contact relationship, used in Student 360 Student Profile</description>
    <label>Relationship</label>
    <length>80</length>
    <type>Text</type>
</CustomField>