force-app/main/default/objects/Emergency_Contact__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <businessOwnerGroup>Data_Owner_SSI</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>[PeopleSoft] PS emergency contact state, used in Student 360 Student Profile</description>
    <label>State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>