force-app/main/default/objects/Emergency_Contact__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <businessOwnerGroup>Data_Owner_SSI</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>[PeopleSoft] PS emergency contact address field - combining address1 and address2 from extract sql PS_EMERGENCY_CNTCT</description>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>