force-app/main/default/objects/Emergency_Contact__c/fields/Student_Contact__c.field-meta.xml
<CustomField>
    <fullName>Student_Contact__c</fullName>
    <businessOwnerGroup>Data_Owner_SSI</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>[Peoplesoft] Relationship to contact used by Student 360 Profile</description>
    <label>Student Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Emergency Contacts</relationshipLabel>
    <relationshipName>Emergency_Contacts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>